--- a/OSLC4Net_SDK/OSLC4Net.StockQuoteSample5/packages.config
+++ b/OSLC4Net_SDK/OSLC4Net.StockQuoteSample5/packages.config
@@ -4,18 +4,20 @@
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net48" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
