--- a/OSLC4Net_SDK/OSLC4Net.StockQuoteSample5/packages.config
+++ b/OSLC4Net_SDK/OSLC4Net.StockQuoteSample5/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
+  <package id="Faker.Net" version="2.0.154" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net48" />
@@ -14,8 +15,10 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net48" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net48" />
