try the https://github.com/Microsoft/dotnet/blob/main/releases/net472/KnownIssues/613745%20-%20Single-name%20references%20are%20removed%20by%20the%20SDK%20when%20targeting%204.7.2.md fix again

--- a/OSLC4Net_SDK/OSLC4Net.StockQuoteExp/OSLC4Net.StockQuoteSample5.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.StockQuoteExp/OSLC4Net.StockQuoteSample5.csproj
@@ -326,6 +326,11 @@
       <Name>OSLC4Net.Core.DotNetRdfProvider</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Net.Http" Version="4.3.4">
+      <ExcludeAssets>All</ExcludeAssets>
+    </PackageReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
