--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
 
     - name: Setup MSBuild Path
       uses: microsoft/setup-msbuild@v1.3.1
-      with:
-        vs-version: '[17.5.3,18.0.0)'
-        msbuild-architecture: x64
+      # with:
+      #   vs-version: '[17.5.3,18.0.0)'
+      #   msbuild-architecture: x64
 
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1
