Update DotNetOpenAuth to 4.3.4.13329
Unfortunately, this is the end of the road

- https://blog.nerdbank.net/2013/06/moving-on-dotnetopenauth-in-search-for-new-project-leaders
- https://github.com/DotNetOpenAuth/DotNetOpenAuth/issues/392#issuecomment-253961669

Closes #40; closes #41

--- a/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
@@ -124,11 +124,14 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DotNetOpenAuth.Core">
+      <Version>4.3.4.13329</Version>
+    </PackageReference>
     <PackageReference Include="DotNetOpenAuth.OAuth.Common">
-      <Version>4.3.1.13153</Version>
+      <Version>4.3.4.13329</Version>
     </PackageReference>
     <PackageReference Include="DotNetOpenAuth.OAuth.Consumer">
-      <Version>4.3.1.13153</Version>
+      <Version>4.3.4.13329</Version>
     </PackageReference>
     <PackageReference Include="dotNetRDF">
       <Version>1.0.13</Version>
