--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -9,9 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: peter-evans/rebase@v2
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }} 
         with:
+          token: ${{ secrets.GH_PAT }} 
           exclude-labels: |
             no-rebase
             dependencies
