--- a/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
@@ -45,6 +45,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="dotNetRdf.Core">
+      <Version>3.0.1</Version>
+    </PackageReference>
     <PackageReference Include="NuGet.Build.Tasks.Pack" Version="5.2.0" />
     <None Include="../../README.md" Pack="true" PackagePath="" />
   </ItemGroup>
@@ -145,9 +148,6 @@
     </PackageReference>
     <PackageReference Include="DotNetOpenAuth.OAuth.Consumer">
       <Version>4.3.4.13329</Version>
-    </PackageReference>
-    <PackageReference Include="dotNetRDF">
-      <Version>1.0.13</Version>
     </PackageReference>
     <PackageReference Include="log4net">
       <Version>2.0.15</Version>
