--- a/OSLC4Net_SDK/OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
@@ -1,48 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>
-    </ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A64566A0-5EDB-48A1-B3E5-7F873169D402}</ProjectGuid>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OSLC4Net.ChangeManagementTest</RootNamespace>
-    <AssemblyName>OSLC4Net.ChangeManagementTest</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AssemblyTitle>OSLC4Net.ChangeManagementTest</AssemblyTitle>
+    <Company>IBM</Company>
+    <Product>OSLC4Net.ChangeManagementTest</Product>
+    <Copyright>Copyright © IBM 2012</Copyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core">
+    <Reference Update="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.WebRequest" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -50,37 +22,10 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestChangeManagementTurtle.cs" />
-    <Compile Include="TestChangeManagementJson.cs" />
-    <Compile Include="TestChangeManagementXml.cs" />
-    <Compile Include="TestChangeManagementRdfXml.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestBase.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\JsonProvider\OSLC4Net.Core.JsonProvider.csproj">
-      <Project>{469BA948-728B-4B8C-80E9-7EC06CED8196}</Project>
-      <Name>OSLC4Net.Core.JsonProvider</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OSLC4Net.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj">
-      <Project>{DFE6E48C-D5B1-4FC6-8D94-C72286080F78}</Project>
-      <Name>OSLC4Net.Core.DotNetRdfProvider</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OSLC4Net.ChangeManagement\OSLC4Net.ChangeManagementCommon.csproj">
-      <Project>{7D5575DD-57DB-4727-906B-A5FD1149C6A4}</Project>
-      <Name>OSLC4Net.ChangeManagementCommon</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OSLC4Net.Client\OSLC4Net.Client.csproj">
-      <Project>{EED02B8F-2C90-4484-B4B6-BB510750B84C}</Project>
-      <Name>OSLC4Net.Client</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj">
-      <Project>{C07B57BD-3356-4AD8-8050-D708B023A8EC}</Project>
-      <Name>OSLC4Net.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
+    <ProjectReference Include="..\OSLC4Net.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj" />
+    <ProjectReference Include="..\OSLC4Net.ChangeManagement\OSLC4Net.ChangeManagementCommon.csproj" />
+    <ProjectReference Include="..\OSLC4Net.Client\OSLC4Net.Client.csproj" />
+    <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="log4net">
@@ -95,16 +40,6 @@
     <PackageReference Include="MSTest.TestFramework">
       <Version>3.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.3</Version>
-    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
